--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ api/api/obj/Debug/netcoreapp3.1/api.assets.cache
 api/api/obj/Debug/netcoreapp3.1/api.csprojAssemblyReference.cache
 api/api/obj/project.assets.json
 api/api/obj/project.nuget.cache
+api/.vs/api/config/applicationhost.config
