--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ api/api/obj/Debug/netcoreapp3.1/api.csprojAssemblyReference.cache
 api/api/obj/project.assets.json
 api/api/obj/project.nuget.cache
 api/.vs/api/config/applicationhost.config
+api/covid-monitor-api/obj/covid-monitor-api.csproj.nuget.dgspec.json
