--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ api/api/obj/project.assets.json
 api/api/obj/project.nuget.cache
 api/.vs/api/config/applicationhost.config
 api/covid-monitor-api/obj/covid-monitor-api.csproj.nuget.dgspec.json
+api/covid-monitor-api/obj/project.nuget.cache
+api/covid-monitor-api/obj/covid-monitor-api.csproj.nuget.g.props
