--- a/api/covid-monitor-api/.gitignore
+++ b/api/covid-monitor-api/.gitignore
@@ -25,6 +25,8 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+api/covid-monitor-api/obj/
+api/covid-monitor-api/bin/Debug/
 
 # Visual Studio 2015 cache/options directory
 .vs/
