--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ api/.vs/api/config/applicationhost.config
 api/covid-monitor-api/obj/covid-monitor-api.csproj.nuget.dgspec.json
 api/covid-monitor-api/obj/project.nuget.cache
 api/covid-monitor-api/obj/covid-monitor-api.csproj.nuget.g.props
+api/covid-monitor-api/obj/
+api/covid-monitor-api/bin/
+api/covid-monitor-api/Properties/
