--- a/api/covid-monitor-api/covid-monitor-api.csproj
+++ b/api/covid-monitor-api/covid-monitor-api.csproj
@@ -25,5 +25,7 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
