--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ upstream client {
 }
 
 upstream api {
-    server api:80;
+    server api:50970;
 }
 
 server {
@@ -17,6 +17,7 @@ server {
         proxy_pass http://client;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Host $http_host;
         proxy_set_header Connection "Upgrade";
     }
 
