--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: "3.4"
 services: 
     db:
-        image: mcr.microsoft.com/mssql/server:2019-CU10-ubuntu-20.04
+        build:
+            dockerfile: Dockerfile
+            context: ./db
         environment: 
             - ACCEPT_EULA=Y
             - SA_PASSWORD=DevelopmentTmpPassword22
         networks: 
             - backend
+        volumes:
+            - mssqldata:/var/opt/mssql
     nginx:
         restart: always
         build:
@@ -48,5 +52,6 @@ services:
 networks:
     frontend:
     backend:
-
+volumes: 
+    mssqldata:
     
